force-app/main/default/objects/Order_Line__c/Order_Line__c.object-meta.xml
<CustomObject>
    <label>Order Line</label>
    <pluralLabel>Order Lines</pluralLabel>
    <nameField>
        <label>Order Line Number</label>
        <type>AutoNumber</type>
        <displayFormat>OL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>