force-app/main/default/objects/Order_Line__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <label>Confirmed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>