force-app/main/default/objects/Order_Line__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>MasterDetail</type>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Order_Lines</relationshipName>
</CustomField>